# backchain-dapp

./: .env  .gitignore  CLAUDE.md  Diagnostic complete v3 · JS  app.js  config.js  deployment-addresses.json  dom-elements.js  hardhat.config.cts  index.html  package-lock.json  package.json  rules-config.json  state.js  tailwind.config.js  transaction-log.json  treasury-nft-ids.json  tsconfig.json  ui-feedback.js  uniswap-v3-pool.json  utils.js  vercel.json  vite.config.js  vite.config.mjs
.claude/: settings.local.json
.openzeppelin/: sepolia.json  unknown-421614.json
CSS/: output.css
api/: _irys.js  faucet.js  referral.js  transak-widget.js  upload-image.js  upload-media.js  upload.js
assets/: backchain-ecosystem-whitepaper-v2.html  grant-application-v4-bnb.md  slither-report.md
cache/: solidity-files-cache.json
contracts/: Agora.sol  AirdropClaim.sol  AirdropVesting.sol  BKCToken.sol  BackchainEcosystem.sol  BackchainGovernance.sol  BackchainRandomness.sol  BuybackMiner.sol  CharityPool.sol  DecentralizedNotary.sol  DelegationManager.sol  EcosystemManager.sol  FortunePool.sol  FortuneTiger.sol  IBackchain.sol  IInterfaces.sol  LiquidityPool.sol  MiningManager.sol  NFTFusion.sol  NFTLiquidityPool.sol  NFTLiquidityPoolFactory.sol  NFTPool.sol  Notary.sol  NotaryCertNFT.sol  PublicSale.sol  RentalManager.sol  RewardBooster.sol  RewardBoosterNFT.sol  RewardManager.sol  SimpleBKCFaucet.sol  StakingPool.sol  TigerGame.sol  V9_CONTRACTS.md
contracts/stylus/: .gitignore  Cargo.toml
contracts/stylus/backcoin-oracle/: Cargo.toml  Cargo.toml.workspace
contracts/stylus/backcoin-oracle/src/: lib.rs  main.rs
docs/: Addresses_All-Contracts.md  Agora_Unstoppable-Social.md  BACKCHAIN_RANDOMNESS.md  BACKCHAT.md  BACKCOIN_ORACLE.md  BE_YOUR_OWN_CEO.md  BKC-Token_Ecosystem-Fuel.md  BKC_TOKEN.md  CHARITY.md  CONTRACTS.md  Economy_How-It-Works.md  FEES.md  FORTUNE_POOL.md  Fees_Complete-Table.md  Fortune-Pool_Fair-Betting.md  Fundraising_No-Middlemen.md  GOVERNANCE.md  Get-Started_5-Minutes.md  Governance_Community-Power.md  How-to-Earn_Three-Income-Streams.md  MINING.md  Mining_From-Fees-to-Rewards.md  NFT-Boosters_Earn-More.md  NFT-Rental_Affordable-Boost.md  NFT-Trading_Instant-Buy-Sell.md  NFT_LIQUIDITY_POOLS.md  NOTARY.md  Notary_Certify-Forever.md  Operators_Build-and-Earn.md  QUICK_START.md  README.md  RENTAL.md  REWARD_BOOSTER_NFT.md  SDK_Developer-Guide.md  STAKING.md  Staking_Lock-and-Earn.md  TOKENOMICS.md
modules/: charity-data.js  charity-transactions.js  data.js  firebase-auth-service.js  price-service.js  transactions.js  wallet.js  webrtc-live.js
pages/: AboutPage.js  ActionsPage.js  AdminPage.js  AirdropPage.js  BackchatPage.js  CharityPage.js  CreditCardPage.js  DaoPage.js  DashboardPage.js  DexPage.js  EarnPage.js  (+17 more)
stylus/randomness-oracle/: .gitignore  Cargo.toml
stylus/randomness-oracle/src/: lib.rs  lib.rs.backup  lib.rs.v2
(+227 files in other folders)
