# ═══════════════════════════════════════════════════════════════════════════════
#                          BACKCHAIN PROTOCOL
#                    Stylus Smart Contracts Workspace
# ═══════════════════════════════════════════════════════════════════════════════
#
# Website: https://backcoin.org
# Docs: https://github.com/backcoin-org/backchain-dapp/tree/main/docs
# GitHub: https://github.com/backcoin-org/backchain-dapp
# License: MIT
#
# ═══════════════════════════════════════════════════════════════════════════════

[workspace]
members = [
    "backcoin-oracle",
    # Add new contracts here:
    # "new-contract",
]
resolver = "2"

[workspace.dependencies]
stylus-sdk = "0.6.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[patch.crates-io]
ruint = { git = "https://github.com/recmo/uint", tag = "v1.12.3" }

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
