[package]
name = "backcoin-oracle"
version = "1.0.0"
authors = ["Backchain Protocol <dev@backcoin.org>"]
description = "Backcoin Oracle - Free Randomness for Arbitrum Ecosystem"
repository = "https://github.com/backcoin-org/backchain-dapp"
license = "MIT"
edition = "2021"

[dependencies]
stylus-sdk = "0.6.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[patch.crates-io]
ruint = { git = "https://github.com/recmo/uint", tag = "v1.12.3" }

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "backcoin-oracle-abi"
path = "src/main.rs"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
